--- a/TheStrengthCard/WebUI/Views/Shared/_Layout.cshtml
+++ b/TheStrengthCard/WebUI/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Client" asp-action="Index">Clients</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Weight" asp-action="Index">Weights</a>
+                        </li>
                     </ul>
                 </div>
             </div>
