--- a/TheStrengthCard/WebUI/Views/Home/Index.cshtml
+++ b/TheStrengthCard/WebUI/Views/Home/Index.cshtml
@@ -2,7 +2,25 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<body class="text-center">
+
+    <form asp-action="Login">
+        <h1 class="h3 mb-3 fw-normal">Login</h1>
+
+        <div class="form-floating">
+            <label asp-for="FirstName" class="control-label"></label>
+            <input asp-for="FirstName" class="form-control">
+        </div>
+        <div class="form-floating">
+            <label asp-for="LastName" class="control-label"></label>
+            <input asp-for="LastName" class="form-control">
+        </div>
+        <div class="form-floating">
+            <label asp-for="Password" class="control-label"></label>
+            <input asp-for="Password" class="form-control">
+        </div>
+
+        <button class="w-40 btn btn-lg btn-primary" type="submit">Login</button>
+    </form>
+
+</body>
