--- a/TheStrengthCard/WebUI/Views/Home/Login.cshtml
+++ b/TheStrengthCard/WebUI/Views/Home/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model Models.Client
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -17,7 +19,7 @@
         </div>
         <div class="form-floating">
             <label asp-for="Password" class="control-label"></label>
-            <input asp-for="Password" class="form-control">
+            <input type="password" asp-for="Password" class="form-control">
         </div>
 
         <button class="w-40 btn btn-lg btn-primary" type="submit">Login</button>
