ClientDetails added as well as exercise tab

--- a/TheStrengthCard/WebUI/Views/Shared/_Layout.cshtml
+++ b/TheStrengthCard/WebUI/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Weight" asp-action="Index">Weights</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Exercise" asp-action="Index">Exercises</a>
+                        </li>
                     </ul>
                 </div>
             </div>
