the strength card stuff

--- a/TheStrengthCard/WebUI/Views/Home/StrengthCard.cshtml
+++ b/TheStrengthCard/WebUI/Views/Home/StrengthCard.cshtml
@@ -18,6 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Amount)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DateTime)
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -27,16 +30,10 @@
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DateTime)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Amount)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ClientId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ExerciseId)
+                @Html.DisplayFor(modelItem => item.DateTime)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
