--- a/WebUI/Views/Admin/StoreDetails.cshtml
+++ b/WebUI/Views/Admin/StoreDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model Models.StoreFront
+﻿@model dynamic
 
 @{
     ViewData["Title"] = "StoreDetails";
@@ -13,33 +13,35 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.storeInventory[0].Product.Name)
+                Product
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.storeInventory[0].Product.Price)
+                Price
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.storeInventory[0].Quantity)
+                Quantity
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.storeInventory) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Product.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Product.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id })
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Store.storeInventory)
+        {
+            <tr>
+                <td>
+                    @Model.Products[item.ProductId].Name
+                </td>
+                <td>
+                    @Model.Products[item.ProductId].Price
+                </td>
+                <td>
+                    @item.Quantity
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "EditInventory", new { id = item.Id })
+                    @Html.ActionLink("Delete", "DeleteInventory", new { id = item.Id })
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
