Display Order history for CUSTOMERS, no options.

--- a/WebUI/Views/Admin/CustomerIndex.cshtml
+++ b/WebUI/Views/Admin/CustomerIndex.cshtml
@@ -33,8 +33,7 @@
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "CustomerEdit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "CustomerDetails", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "CustomerDelete", new { id = item.Id })
+                    @Html.ActionLink("Details", "CustomerDetails", new { id = item.Id })
                 </td>
             </tr>
         }
