--- a/WebUI/Views/Home/Home.cshtml
+++ b/WebUI/Views/Home/Home.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h1>Store Select</h1>
-
+<p>
+    <a asp-action="ShowOrderHistory">View Order History</a>
+</p>
 <form asp-action="SelectStore">
     <table class="table">
         <thead>
