Finished! Now to make it prettier.

--- a/WebUI/Views/Admin/OrderDetails.cshtml
+++ b/WebUI/Views/Admin/OrderDetails.cshtml
@@ -62,5 +62,5 @@
     </table>
 </div>
 <div>
-    <a asp-action="CustomerDetails">Back to Orders</a>
+    <a asp-action="StoreIndex">Back to List</a>
 </div>
