--- a/WebUI/Views/Admin/EditInventory.cshtml
+++ b/WebUI/Views/Admin/EditInventory.cshtml
@@ -30,6 +30,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="StoreDetails" asp-route-id="@Model.ID">Back to List</a>
 </div>
 
