--- a/WebUI/Views/Admin/ProductIndex.cshtml
+++ b/WebUI/Views/Admin/ProductIndex.cshtml
@@ -38,9 +38,7 @@
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "ProductEdit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "ProductDetails", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "ProductDelete", new { id = item.Id })
+                    @Html.ActionLink("Edit", "ProductEdit", new { id = item.Id })
                 </td>
             </tr>
         }
