--- a/WebUI/Views/Admin/StoreInventoryCreate.cshtml
+++ b/WebUI/Views/Admin/StoreInventoryCreate.cshtml
@@ -26,7 +26,7 @@
             </div>
             <div class="form-group">
                 <label for="Quantity" class="control-label"></label>
-                <input type="number" name="Quantity" min="1" class="form-control" />
+                <input type="number" name="Quantity" value="0" min="1" class="form-control" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -36,6 +36,5 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="StoreIndex">Back to List</a>
 </div>
-
