Finished. Wish it was prettier.

--- a/WebUI/Views/Admin/CustomerCreate.cshtml
+++ b/WebUI/Views/Admin/CustomerCreate.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "CustomerCreate";
 }
 
-<h1>CustomerCreate</h1>
+<h1>Admin: New Customer Registration</h1>
 
 <h4>Customer</h4>
 <hr />
