--- a/WebUI/Views/Admin/CustomerDetails.cshtml
+++ b/WebUI/Views/Admin/CustomerDetails.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "CustomerDetails";
 }
 
-<h1>CustomerDetails</h1>
+<h1>Admin: Customer Orders</h1>
 
 <div>
     <h4>Orders</h4>
