--- a/WebUI/Views/Admin/CustomerIndex.cshtml
+++ b/WebUI/Views/Admin/CustomerIndex.cshtml
@@ -3,10 +3,10 @@
 @{
     ViewData["Title"] = "CustomerIndex";
 }
-<h1>CustomerIndex</h1>
+<h1>Admin: Customer Index</h1>
 
 <p>
-    <a asp-action="CustomerCreate">Create New</a>
+    <a asp-action="CustomerCreate">Create New Customer</a>
 </p>
 
 <form asp-action="CustomerSearch">
