--- a/WebUI/Views/Admin/OrderDetails.cshtml
+++ b/WebUI/Views/Admin/OrderDetails.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "OrderDetails";
 }
 
-<h1>OrderDetails</h1>
+<h1>Admin: Customer Order Details</h1>
 
 <div>
-    <h4>Orders</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
