--- a/WebUI/Views/Admin/ProductCreate.cshtml
+++ b/WebUI/Views/Admin/ProductCreate.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "ProductCreate";
 }
 
-<h1>ProductCreate</h1>
+<h1>Admin: Create New Product</h1>
 
 <h4>Product</h4>
 <hr />
