--- a/WebUI/Views/Admin/ProductIndex.cshtml
+++ b/WebUI/Views/Admin/ProductIndex.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "ProductIndex";
 }
 
-<h1>ProductIndex</h1>
+<h1>Admin: Product Index</h1>
 
 <p>
     <a asp-action="ProductCreate">Create New</a>
