--- a/WebUI/Views/Admin/StoreCreate.cshtml
+++ b/WebUI/Views/Admin/StoreCreate.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "CreateStore";
 }
 
-<h1>CreateStore</h1>
+<h1>Admin: Creating a New Store</h1>
 
 <h4>StoreFront</h4>
 <hr />
