--- a/WebUI/Views/Admin/StoreDetails.cshtml
+++ b/WebUI/Views/Admin/StoreDetails.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "StoreDetails";
 }
 
-<h1>StoreDetails</h1>
+<h1>Admin: Store Inventory</h1>
 
 <p>
     <a asp-action="StoreInventoryCreate">Create New</a>
