--- a/WebUI/Views/Admin/StoreIndex.cshtml
+++ b/WebUI/Views/Admin/StoreIndex.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "StoreIndex";
 }
 
-<h1>StoreIndex</h1>
+<h1>Admin: Store Index</h1>
 
 <p>
     <a asp-action="StoreCreate">Create New</a>
