--- a/WebUI/Views/Admin/StoreInventoryCreate.cshtml
+++ b/WebUI/Views/Admin/StoreInventoryCreate.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "StoreInventoryCreate";
 }
 
-<h1>StoreInventoryCreate</h1>
+<h1>Admin: Adding Inventory</h1>
 
 <h4>Inventory</h4>
 <hr />
