--- a/WebUI/Views/Admin/StoreOrders.cshtml
+++ b/WebUI/Views/Admin/StoreOrders.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "StoreOrders";
 }
 
-<h1>StoreOrders</h1>
+<h1>Admin: Orders Placed At Store</h1>
 
 <form asp-action="SortStoreOrders">
     <input type="submit" value="Sort Orders" /><br />
