--- a/WebUI/Views/Home/Home.cshtml
+++ b/WebUI/Views/Home/Home.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Store Select";
 }
 
-<h1>Store Select</h1>
+<h1>Select a Store:</h1>
 <p>
     <a asp-action="ShowOrderHistory">View Order History</a>
 </p>
