--- a/WebUI/Views/Home/StoreInventory.cshtml
+++ b/WebUI/Views/Home/StoreInventory.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "StoreInventory";
 }
 
-<h1>StoreInventory</h1>
+<h1>What product(s) would you like?</h1>
 
 <form name="Whatever" asp-action="CreateOrder">
     <table class="table">
