--- a/WebUI/Views/Admin/ProductEdit.cshtml
+++ b/WebUI/Views/Admin/ProductEdit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "ProductEdit";
 }
 
-<h1>ProductEdit</h1>
+<h1>Admin: Edit a Product</h1>
 
 <h4>Product</h4>
 <hr />
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" readonly />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
