--- a/WebUI/Views/Home/ShowOrderHistory.cshtml
+++ b/WebUI/Views/Home/ShowOrderHistory.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "ShowOrderHistory";
 }
 
-<h1>CustomerDetails</h1>
+<h1>Order History</h1>
 
 <form asp-action="SortOrders">
     <input type="submit" value="Sort Orders" /><br />
