--- a/WebUI/Views/Home/SignUp.cshtml
+++ b/WebUI/Views/Home/SignUp.cshtml
@@ -14,12 +14,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Username" class="control-label"></label>
-                <input asp-for="Username" class="form-control" />
+                <input asp-for="Username" class="form-control" style="width:auto" />
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input type="password" asp-for="Password" class="form-control" />
+                <input type="password" asp-for="Password" class="form-control" style="width:auto" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
