--- a/WebUI/Views/Home/Login.cshtml
+++ b/WebUI/Views/Home/Login.cshtml
@@ -18,12 +18,18 @@
             <input type="password" asp-for="Password" class="form-control" style="width:auto">
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
-        <div style="position:relative; top:10px">
+        <br />
+        <div style="position:relative">
             <button class="w-40 btn btn-lg btn-primary" type="submit">Login</button>
         </div>
     </form>
+    <br />
 
-    <span style="position:relative; top:20px">
+    <span style="position:relative">
         @Html.ActionLink("Sign Up", "SignUp")
     </span>
 </body>
+<br />
+<div style="position:relative">
+    <img src="~/Kitah.gif" />
+</div>
