--- a/WebUI/Views/Admin/CustomerEdit.cshtml
+++ b/WebUI/Views/Admin/CustomerEdit.cshtml
@@ -18,6 +18,10 @@
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <input asp-for="Password" type="hidden" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Credit" class="control-label"></label>
                 <input asp-for="Credit" class="form-control" />
                 <span asp-validation-for="Credit" class="text-danger"></span>
