--- a/WebUI/Views/Admin/EditInventory.cshtml
+++ b/WebUI/Views/Admin/EditInventory.cshtml
@@ -13,16 +13,16 @@
         <form asp-action="EditInventory">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label class="control-label">@Model.Name</label>
+                <label class="control-label">Product Name</label>
                 <input value="@Model.Name" class="form-control" readonly />
             </div>
             <div class="form-group">
-                <label class="control-label">@Model.Price</label>
+                <label class="control-label">Price</label>
                 <input value="@Model.Price" class="form-control" readonly />
             </div>
             <div class="form-group">
-                <label name="Quantity" class="control-label"></label>
-                <input value="@Model.Quantity" type="number" min="1" name="Quantity" class="form-control" />
+                <label name="Quantity" class="control-label">Quantity</label>
+                <input value="@Model.Quantity" placeholder="@Model.Quantity" type="number" min="1" name="Quantity" class="form-control" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
